L8_ex2 fix